      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      Autoconf: fix buggy tests for ether_ntohost().
      Makefile.in: Do not install a version-suffixed tcpdump binary if the
        .devel file does not exists.
      tests: On HP-UX use "diff -c" by default.
      Reimplement the tests similarly to libpcap.
      CI: Implement cross-compiling with libpcap.
    Documentation:

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.7 tcpdump release (so far!)
    Source code:
      NetFlow: Use tcp_flag_values[] for TCP flags.
    Refine protocol decoding for:
      MPTCP: parse MPC data_len field, print flags from MP_CAPABLE option,
        dissect the MP_TCPRST sub-option.
      TCP: Add support for the AE (AccECN) flag.
      IP: Update the offload "presumed TSO" case for "BIG TCP".
    User interface:
       Print an error message about --count without -r or -V.

Tuesday, December 30, 2025 / The Tcpdump Group
  Summary for 4.99.6 tcpdump release
    Remove protocol decoding for:
      OTV (draft-hasmit-otv-04, this Internet-Draft is no longer active).
    Refine protocol decoding for:
      DNS: Use ND_TCHECK_LEN() instead of a custom bounds check.
      IPv6: Add a missing comma and remove a colon in the output.
      TCP: Note if the Urgent Pointer is non-zero while URG flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Note if the Acknowledgment Number is non-zero while ACK flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Fix Reset segment processing.
      IP, IPv6: Fix setting the snapshot length for the payload.
      IP: Use ND_TTEST_LEN() instead of a custom bounds check.
      frag6: Add a bounds check in non-verbose mode.
      PTP: Remove spaces before colons in output.
      PTP: Fix management packet fields.
      ISO: Avoid undefined behavior and integer overflow in the Fletcher
           checksum calculation.