@@ -78,7 +78,10 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       tests: On HP-UX use "diff -c" by default.
       Reimplement the tests similarly to libpcap.
       CI: Implement cross-compiling with libpcap.
+      Autoconf: Add QNX support to AC_LBL_LIBRARY_NET().
+      Treat SA_RESTART as optional.
     Documentation:
+      Add a README.qnx.md file.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 4.99.7 tcpdump release (so far!)
